--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,13 @@
 
 #app {
-  width: 100%;
-  height: 100%;
-  background-color: pink;
+  width: 100vw;
+  min-height: 100vh;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: aliceblue;
 }
 
-
+.hidden {
+  display: none;
+}
