--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -8,7 +8,7 @@
 
 :root {
     --black: #000;
-    --white: #000;
+    --white: #fff;
     --dark-grey: #303030;
     font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
