--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ h1 {
   letter-spacing: -5px;
 }
 
-h3 {
+h2 {
   font-size: 5.6rem;
   line-height: 6.8rem;
 }
@@ -148,10 +148,31 @@ main {
 /* HIDDEN SECTION WITH MORE INFO */
 
 .more__info {
-
+  display:flex;
+  padding: 7.4rem 16.5rem 7.4rem 16.5rem;
 }
 
+.time-year {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 4.2rem;
+}
 
+.vertical-border {
+  border-right: 1px solid rgba(255,255,255,0.25);
+  -webkit-background-clip: padding-box; /* for Safari */
+  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+}
+
+.pl-9 {
+  padding-left: 9.4rem;
+}
+h6 {
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: .9rem;
+}
 /* BUTTONS */
 
 .refresh-btn {
