--- a/src/css/main.css
+++ b/src/css/main.css
@@ -229,6 +229,7 @@ h6 {
   gap: 1rem;
   align-items:center;
   justify-content:center;
+  color: #303030;
 }
 
 /* UTIL */
@@ -236,11 +237,12 @@ h6 {
   display: none;
 }
 
-.fixed {
-  position: fixed;
-  bottom: 2rem;
-  right: 15rem;
-  width: 300px;
+footer {
+  margin-top: auto;
+  padding: .6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* Background-filter has low support on browsers */
 
@@ -300,9 +302,7 @@ h6 {
   .vb-dark, .vb-light {
     border-right: none;
   }
-  .fixed {
-    right: 9rem;
-  }
+
 }
 
 @media only screen and (max-width: 450px){
@@ -371,8 +371,5 @@ h6 {
   .pl-9 {
     padding-left: 0;
   }
-  footer {
-    width: 100%;
-    left: 2rem;
-  }
+
 }
