--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -26,6 +26,8 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--white);
