--- a/src/css/main.css
+++ b/src/css/main.css
@@ -119,7 +119,10 @@ main {
   justify-content: space-between;
   padding: 5.6rem 16.5rem 10rem 16.5rem;
 }
-
+.weather__section {
+  display: flex;
+  flex-direction: column;
+}
 .weather__current {
   display: flex;
   align-items: center;
@@ -217,6 +220,7 @@ h6 {
 }
 
 .btn {
+  margin-top: 2rem;
   width: 15rem;
   height: 5.6rem;
   border-radius: 28px;
