--- a/src/css/main.css
+++ b/src/css/main.css
@@ -231,6 +231,7 @@ h6 {
 }
 
 .btn {
+  background-color: var(--white);
   margin-top: 2rem;
   width: 15rem;
   height: 5.6rem;
@@ -244,7 +245,7 @@ h6 {
   gap: 1rem;
   align-items:center;
   justify-content:center;
-  color: #303030;
+  color: rgba(48,48,48,0.5);
 }
 
 /* UTIL */
